# pyside-pyside-setup

./: .flake8  .gitignore  CMakeLists.txt  LICENSE.COMMERCIAL  LICENSE.FDL  LICENSE.GPLv3  LICENSE.GPLv3-EXCEPT  LICENSE.LGPLv3  README.md  README.pyside6.md  README.pyside6_addons.md  README.pyside6_essentials.md  README.pyside6_examples.md  README.shiboken6-generator.md  README.shiboken6.md  coin_build_instructions.py  coin_test_instructions.py  create_wheels.py  header.BSD-OLD  product_dependencies.yaml  requirements-coin.txt  requirements-doc.txt  requirements.txt  setup.cfg  setup.py  testrunner.py
sources/pyside-tools/: CMakeLists.txt  android_deploy.py  android_deploy.pyproject  deploy.py  deploy.pyproject  metaobjectdump.py  project.py  project.pyproject  pyside_tool.py  qml.py  qtpy2cpp.py  requirements-android.txt
sources/pyside-tools/cmake/: PySideAndroid.cmake  PySideToolsHelpers.cmake  PySideToolsSetup.cmake
sources/pyside-tools/deploy/: __init__.py  commands.py  config.py  default.spec  nuitka_helper.py  python_helper.py
sources/pyside-tools/deploy_lib/: __init__.py  commands.py  config.py  default.spec  dependency_util.py  deploy_util.py  design_studio.py  nuitka_helper.py  python_helper.py
sources/pyside-tools/project/: __init__.py  newproject.py  project_data.py  utils.py
sources/pyside-tools/project_lib/: newproject.py
sources/pyside-tools/qtpy2cpp_lib/: astdump.py  qt.py  visitor.py
sources/pyside6/: .cmake.conf  CMakeLists.txt  pyside_version.py
sources/pyside6/PySide6/: CMakeLists.txt  __feature__.pyi.in  __init__.py.in  _config.py.in  global.h.in  licensecomment.txt  pysideqtesttouch.h  pysidewtypes.h  qpydesignerextensions.h  qpyqmlparserstatus.h  qpyqmlpropertyvaluesource.h  qpytextobject.cpp  qpytextobject.h  qtcorehelper.h  qtdatavisualization_helper.h  qtdbushelper.h  qtgraphs_helper.h  qtguihelper.h
sources/pyside6/cmake/: PySideHelpers.cmake  PySideSetup.cmake
sources/pyside6/doc/: CMakeLists.txt  README.md  additionaldocs.lst  api.rst  conf.py.in  considerations.rst  contents.rst  deployment-briefcase.rst  deployment-cxfreeze.rst  deployment-fbs.rst  deployment-nuitka.rst  deployment-py2exe.rst  deployment-pyinstaller.rst  deployment.rst  faq.rst  feature-why.rst  gettingstarted-linux.rst  gettingstarted-macOS.rst  gettingstarted-windows.rst  gettingstarted.rst  import_inheritance.py  index.rst  inheritance_diagram.py  inheritance_diagram.pyproject  inheritance_graph.py  json_inheritance.py  modules.rst  package_details.rst  porting_from2.rst  pysideinclude.py  qdoc_spawner.py.in  qtattributionsscannertorst.py  quickstart.rst  typesystem_doc.xml.in  videos.rst
sources/pyside6/libpyside/: CMakeLists.txt  class_property.cpp  class_property.h  dynamicqmetaobject.cpp  dynamicqmetaobject.h  dynamicslot.cpp  dynamicslot_p.h  feature_select.cpp  feature_select.h  globalreceiverv2.cpp  globalreceiverv2.h  libpyside.qrc  pyside.cpp  pyside.h  pyside_numpy.cpp  pyside_numpy.h  pyside_p.h  pysideclassdecorator.cpp  pysideclassdecorator_p.h  pysideclassinfo.cpp  pysideclassinfo.h  pysideclassinfo_p.h  pysidecleanup.h  pysideinit.h  pysidelogging_p.h  pysidemacros.h  pysidemetafunction.cpp  pysidemetafunction.h  pysidemetafunction_p.h  pysidemetatype.h  pysideproperty.cpp  pysideproperty.h  pysideproperty_p.h  pysideqapp.h  pysideqenum.cpp  pysideqenum.h  pysideqflags.cpp  pysideqflags.h  pysideqhash.h  pysideqmetatype.h  (+17 more)
sources/pyside6/libpysideqml/: CMakeLists.txt  PySide6QmlConfig-spec.cmake.in  PySide6QmlConfig.cmake.in  pysideqml.cpp  pysideqml.h  pysideqmlattached.cpp  pysideqmlattached.h  pysideqmlattached_p.h  pysideqmlextended.cpp  pysideqmlextended_p.h  pysideqmlforeign.cpp  pysideqmlforeign_p.h  pysideqmllistproperty.cpp  pysideqmllistproperty_p.h  pysideqmlmacros.h  pysideqmlmetacallerror.cpp  pysideqmlmetacallerror_p.h  pysideqmlnamedelement.cpp  pysideqmlnamedelement_p.h  pysideqmlregistertype.cpp  pysideqmlregistertype.h  pysideqmlregistertype_p.h  pysideqmltypeinfo.cpp  pysideqmltypeinfo_p.h  pysideqmluncreatable.cpp  pysideqmluncreatable.h
sources/pyside6/qtexampleicons/: CMakeLists.txt  module.c
sources/pyside6/tests/: CMakeLists.txt  init_paths.py  run_test.sh
sources/shiboken6/: .cmake.conf  CMakeLists.txt  cmake_uninstall.cmake  generatorrunnermacros.h  icecc.cmake  shiboken_tool.py  shiboken_version.py
sources/shiboken6/ApiExtractor/: CMakeLists.txt  abstractmetaargument.cpp  abstractmetaargument.h  abstractmetaattributes.cpp  abstractmetaattributes.h  abstractmetabuilder.cpp  abstractmetabuilder.h  abstractmetabuilder_helpers.cpp  abstractmetabuilder_p.h  abstractmetaenum.cpp  abstractmetaenum.h  abstractmetafield.cpp  abstractmetafield.h  abstractmetafunction.cpp  abstractmetafunction.h  abstractmetalang.cpp  abstractmetalang.h  abstractmetalang_enums.h  abstractmetalang_helpers.h  abstractmetalang_typedefs.h  abstractmetatype.cpp  abstractmetatype.h  addedfunction.cpp  addedfunction.h  addedfunction_p.h  anystringview_helpers.cpp  anystringview_helpers.h  apiextractor.cpp  apiextractor.h  apiextractorflags.h  apiextractorresult.cpp  apiextractorresult.h  apiextractorresultdata_p.h  arraytypeentry.h  classdocumentation.cpp  classdocumentation.h  codesnip.cpp  codesnip.h  codesniphelpers.cpp  codesniphelpers.h  (+86 more)
sources/shiboken6/cmake/: FindDocTools.cmake  ShibokenHelpers.cmake  ShibokenSetup.cmake  shiboken_helpers.cmake
sources/shiboken6/data/: CMakeLists.txt  Shiboken6Config-spec.cmake.in  Shiboken6ToolsConfig.cmake.in  shiboken6.pc.in  shiboken_helpers.cmake
sources/shiboken6/doc/: CMakeLists.txt  conf.py.in  considerations.rst  gettingstarted.rst  index.rst  shiboken-genpyi.rst  shibokengenerator.rst  shibokenmodule.rst  typediscovery.rst  typesystem.rst  typesystem_arguments.rst  typesystem_builtin_types.rst  typesystem_codeinjection.rst  typesystem_containers.rst  typesystem_conversionrule.rst  typesystem_converters.rst  typesystem_documentation.rst  typesystem_manipulating_objects.rst  typesystem_modify_function.rst  typesystem_ownership.rst  typesystem_sequenceprotocol.rst  typesystem_templates.rst  (+4 more)
(+3448 files in other folders)
